# OpenGLMagicCube

./: .gitignore  CMakeLists.txt  OpenGLMagicCube.aps  OpenGLMagicCube.sln  OpenGLMagicCube.vcxproj  OpenGLMagicCube.vcxproj.filters  main.cpp
docs/: OpenGLCubeDirect.bak  OpenGLCubeDirect.pptx
include/common/glad/: glad.h
resource/shader/: fragmentShader.glsl  fragmentShaderColor.glsl  fragmentShaderText.glsl  vertexShader.glsl  vertexShaderColor.glsl  vertexShaderText.glsl
source/: cameraSystem.h  glad.c  shaderLoader.h
