project(cube)
find_package(OpenGL REQUIRED)
if(NOT OPENGL_FOUND)
    message("ERROR: OpenGL not found")
endif(NOT OPENGL_FOUND)
set(GL_LIBRARY GL GLU X11)
# set(OpenGL_GL_PREFERENCE GLVND)
configure_file(resource/shader/fragmentShader.glsl resource/shader/fragmentShader.glsl COPYONLY)
configure_file(resource/shader/vertexShader.glsl resource/shader/vertexShader.glsl COPYONLY)
# configure_file(resource/texture/awesomeface.png resource/texture/cube00.png COPYONLY)
configure_file(resource/texture/Side.1536x1536.png resource/texture/cube00.png COPYONLY)
configure_file(resource/texture/Seas0.1536x1536.png resource/texture/cube01.png COPYONLY)
configure_file(resource/texture/Side.1536x1536.png resource/texture/cube02.png COPYONLY)
configure_file(resource/texture/Side.1536x1536.png resource/texture/cube03.png COPYONLY)
configure_file(resource/texture/Top.1536x1536.png resource/texture/cube04.png COPYONLY)
configure_file(resource/texture/Top.1536x1536.png resource/texture/cube05.png COPYONLY)
# configure_file(resource/texture/wall.jpg resource/texture/cube02.png COPYONLY)
include_directories(include/common)
add_executable(cube main.cpp source/glad.c)
target_link_libraries(cube glfw GL m Xrandr Xi X11 Xxf86vm pthread dl Xinerama Xcursor)
